samples/_failures_safe/1761393243_43c0f5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1555b5ce.c:164: error: expected ‘;’, ‘,’ or ‘)’ at end of input
